--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="" data-di-loaded="1">
+<html lang="en" data-di-loaded="1">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
         <link id="mktoForms2BaseStyle" rel="stylesheet" type="text/css" href="files/forms2.css">
         <link id="mktoForms2ThemeStyle" rel="stylesheet" type="text/css" href="files/forms2-theme-inset.css">
     </head>
-    <body class="page-id-4469 page-market-research parent-solutions post-type-page" style="">
+    <body class="page-id-4469 page-market-research parent-solutions post-type-page">
         <header>
             <section class="menu-header">
                 <div class="mobile-header">
@@ -2450,7 +2450,7 @@
         
         
         <div class="weglot-container wg-default" data-switcher-id="1" id="weglot-switcher-1">
-            <div data-wg-notranslate="true" aria-expanded="false" aria-haspopup="listbox" aria-label="Language Switcher" aria-controls="language-list" role="combobox" tabindex="0" class="weglot_switcher vertical_expand closed wg-down wg-right" style="">
+            <div data-wg-notranslate="true" aria-expanded="false" aria-haspopup="listbox" aria-label="Language Switcher" aria-controls="language-list" role="combobox" tabindex="0" class="weglot_switcher vertical_expand closed wg-down wg-right" >
                 <div aria-label="Language selected: English" tabindex="-1" class="language-option active-language" style="background-color: rgb(255, 255, 255);"><a href="https://www.medallia.com/solutions/market-research/?source=Marketing%20-%20Paid%20Search&amp;utm_campaign=medallia_emea_market-research&amp;utm_source=google-ads&amp;utm_medium=text-ad&amp;utm_content=solutions-market-research&amp;utm_term=market%20research%20solutions_b_g_c_724634910944&amp;gad_source=1&amp;gclid=Cj0KCQjw1um-BhDtARIsABjU5x6gf67X0mkkjHVTov7CnUNRTqXbQMiMjFoJw5ATEtjAQ9ECaDfe_PEaAmJ-EALw_wcB#" aria-label="EN" tabindex="-1" id="weglot-language-en" style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" data-di-id="#weglot-language-en"><img src="files/us.svg" width="20" height="20" alt="English flag" class="wg-flag">EN</a></div>
                 <div role="listbox" aria-label="Language list" class="language-list">
                     <div role="option" tabindex="-1" class="language-option" style="background-color: rgb(255, 255, 255);"><a href="https://www.medallia.com/fr/solutions/market-research/?source=Marketing%20-%20Paid%20Search&amp;gad_source=1" aria-label="FR" tabindex="-1" id="weglot-language-fr" style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" data-di-id="#weglot-language-fr"><img src="files/fr.svg" width="20" height="20" alt="Français flag" class="wg-flag">FR</a></div>
