--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="background-image" style="background-image: url('files/ab4b6ff1-ad08-4228-b41d-6bb8819c1c37_hero_2200x1000.webp')"></div>
                         <div class="background-overlay bg-blue"></div>
                         <div class="overlay-image__wrap">
-                            <img class="overlay-image" src="files/ee3d7030-7f01-4b5e-a279-1e449a5a5bf6_hero_product_v3.webp" alt="IMG" style="bottom: 0%; left: 0%">
+                            
                         </div>
                     </div>
                     <div class="container">
@@ -70,7 +70,7 @@
                                 </a>
                             </div>
                             <div class="overlay-image__wrap">
-                                <img class="overlay-image" src="files/ee3d7030-7f01-4b5e-a279-1e449a5a5bf6_hero_product_v3.webp" alt="IMG">
+                                
                             </div>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                                     <p>Add a qualitative lens to quantitative data using video surveys, and uncover trends with AI-powered analysis tools. Or launch a DIY survey for a quick and easy way to gather insights from customers and consumers.</p>
                                 </div>
                             </div>
-                            <div class="image__wrap image-size-normal" style="background-image: url('files/af776ad1-4928-460a-9bbc-002e6a15b335_market-research_new-image.webp'); aspect-ratio: 1422 / 1100 ">
+                            <div class="image__wrap image-size-normal" style="background-image: url('files/img-woman.jpg'); aspect-ratio: 1422 / 1100 ">
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                                     <p>The combination of real-time, unblinded behavioral data and survey data gives your team unprecedented insight into your customers and competitors, so you can get ahead of market needs and empower your team to act.</p>
                                 </div>
                             </div>
-                            <div class="image__wrap image-size-normal" style="background-image: url('files/c19e0916-238d-4de7-8871-274daa2c6818_2ndmodule711x550px@2x.webp'); aspect-ratio: 1422 / 1100 ">
+                            <div class="image__wrap image-size-normal" style="background-image: url('files/img-dasg-2.jpg'); aspect-ratio: 1422 / 1100 ">
                             </div>
                         </div>
                     </div>
