add adv and comp placeholder

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <link id="mktoForms2ThemeStyle" rel="stylesheet" type="text/css" href="files/forms2-theme-inset.css">
     </head>
     <body class="page-id-4469 page-market-research parent-solutions post-type-page">
+        <p style="position: absolute; z-index: 99999999; left: 50%; top: 0; transform: translateX(-50%); text-align: center; color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif;">
+            Advertisement
+        </p>
         <header>
             <section class="menu-header">
                 <div class="mobile-header">
@@ -59,7 +62,7 @@
                     </div>
                     <div class="container">
                         <div class="content__wrap text-white">
-                            <h5 class="preheader text-white">MEDALLIA FOR MARKET RESEARCH</h5>
+                            <h1 class="header text-white">{Company}</h1>
                             <h1 class="header text-white">Stay ahead of changing market dynamics</h1>
                             <div class="copy text-white">
                                 <p>Harness richer insights at scale so you can take action with confidence</p>
@@ -91,7 +94,7 @@
                             <div class="content__wrap w-100">
                                 <div class="text-align-center">
                                     <p>In today’s rapidly changing world, consumer lifestyles and the competitive landscape can shift in the blink of an eye. Your team relies on insights to understand the opportunities and challenges facing your business – with a need to act before it’s too late.</p>
-                                    <p>Empower your team with real-time insights at scale so you can act quickly with confidence. With Medallia, you can analyze massive datasets in real time, capture rich survey feedback quickly, cut down on research project timelines, and drive informed decisions.</p>
+                                    <p>Empower your team with real-time insights at scale so you can act quickly with confidence. With {Company}, you can analyze massive datasets in real time, capture rich survey feedback quickly, cut down on research project timelines, and drive informed decisions.</p>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +149,7 @@
                 </div>
             </section>
             <section  class="section">
-                <div class="section__wrap bg-gray text-black pl-none pr-none pt-large pb-large">
+                <div class="section__wrap bg-gray text-black pl-none pr-none pt-large pb-large">www
                     <div class="container">
                         <div class="header-container ml-none mr-none mt-medium mb-medium">
                             <div class="header__wrap w-100">
@@ -156,7 +159,7 @@
                         <div class="image-copy image-side-left ml-none mr-none mt-medium mb-medium v-align-center type-normal">
                             <div class="copy__wrap">
                                 <div class="content">
-                                    <p>Analyze consumer spending and foot traffic behavior, and deploy targeted surveys to consumers who just visited a store or a website. Gain a holistic view of the market by comparing your performance against competitors with unblinded data. Don’t wait for independent reports on competitors – with Medallia you can quickly see which competitors are capturing share and specific opportunities for improvement.</p>
+                                    <p>Analyze consumer spending and foot traffic behavior, and deploy targeted surveys to consumers who just visited a store or a website. Gain a holistic view of the market by comparing your performance against competitors with unblinded data. Don’t wait for independent reports on competitors – with {Company} you can quickly see which competitors are capturing share and specific opportunities for improvement.</p>
                                     <p>The combination of real-time, unblinded behavioral data and survey data gives your team unprecedented insight into your customers and competitors, so you can get ahead of market needs and empower your team to act.</p>
                                 </div>
                             </div>
@@ -197,7 +200,7 @@
                         <div class="image-copy image-side-left ml-none mr-none mt-medium mb-medium v-align-center type-normal">
                             <div class="copy__wrap">
                                 <div class="content">
-                                    <p>Create, edit, and distribute surveys in no time with Medallia’s easy-to-use survey builder. Choose a predesigned template, based on decades of market research expertise, or start from scratch.</p>
+                                    <p>Create, edit, and distribute surveys in no time with {Company} easy-to-use survey builder. Choose a predesigned template, based on decades of market research expertise, or start from scratch.</p>
                                     <p>Get to insights faster by quickly collecting answers from your target groups and maximizing responses via multiple channels. Leverage real-time reporting to spot trends earlier, determine response rates more accurately, send reminders to increase responses, and easily share results across your organization.</p>
                                 </div>
                             </div>
@@ -219,7 +222,7 @@
                             <a style="pointer-events: none !important;" class="card up shadow  bg-white" target="" data-di-id="di-id-fb114137-5fb248e4">
                                 <div class="content__wrap text-align-center">
                                     <h4 class="card-title">
-                                        Medallia Video            
+                                        {Company} Video            
                                     </h4>
                                     <div class="card-copy">
                                         <p>Capture, analyze and share consumer insight video in a single platform. Automatically extract meaningful insights, so you can tell powerful stories that inspire better decision-making.</p>
@@ -380,7 +383,7 @@
                                                             <div class="mktoAsterix">*</div>
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <div class="mktoLogicalField mktoCheckboxList mktoHasWidth" style="width: 285px;"><input name="emailOptIn" id="mktoCheckbox_62106_0" type="checkbox" value="true" aria-labelledby="LblemailOptIn LblmktoCheckbox_62106_0 InstructemailOptIn" class="mktoField"><label for="mktoCheckbox_62106_0" id="LblmktoCheckbox_62106_0">By checking this box, I agree to receive information and promotional material about Medallia solutions.  </label></div>
+                                                        <div class="mktoLogicalField mktoCheckboxList mktoHasWidth" style="width: 285px;"><input name="emailOptIn" id="mktoCheckbox_62106_0" type="checkbox" value="true" aria-labelledby="LblemailOptIn LblmktoCheckbox_62106_0 InstructemailOptIn" class="mktoField"><label for="mktoCheckbox_62106_0" id="LblmktoCheckbox_62106_0">By checking this box, I agree to receive information and promotional material about {Company} solutions.  </label></div>
                                                         <span id="InstructemailOptIn" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
