--- a/index.html
+++ b/index.html
@@ -464,7 +464,13 @@
                             </div>
                         </div>
                         <div class="legal-links__wrap__copyright">
-                            <p>Copyright © 2025 {Company}. All rights reserved.</p>
+                            <p style="color: #000 !important;">
+                                CIN - U01631KA2010PTC096843 <br>
+                                Address - 2, Western Urban Rd, Davri Nagar, Siddharth Nagar, <br>
+                                Santacruz East, Mumbai, Maharashtra 400055, India <br>
+                                Phone - 0674 2702416 <br>
+                            </p>
+                            <p style="color: #000 !important;">Copyright © 2025 {Company}. All rights reserved.</p>
                         </div>
                     </div>
                 </div>
