--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         
         <link id="mktoForms2BaseStyle" rel="stylesheet" type="text/css" href="files/forms2.css">
         <link id="mktoForms2ThemeStyle" rel="stylesheet" type="text/css" href="files/forms2-theme-inset.css">
+        <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
     </head>
     <body class="page-id-4469 page-market-research parent-solutions post-type-page">
         <p style="position: absolute; z-index: 99999999; left: 50%; top: 0; transform: translateX(-50%); text-align: center; color: rgb(0, 0, 0); font-family: Arial, Helvetica, sans-serif;">
