--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                                     <p>You’ll receive a white-glove, consultative approach to solving your toughest business challenges.&nbsp; From project design through analysis and storytelling, our clients love our ability to push past the obvious and deliver insights that are actionable and prioritized for impact.</p>
                                 </div>
                                 <a target="_blank" href="about.html" class="btn btn-blue-white">
-                                Learn More        </a>
+                                    Learn More        
+                                </a>
                             </div>
                             <div class="image__wrap image-size-normal" style="background-image: url('files/ac40dfd9-4986-4903-8546-ea60e7bb514a_iStock-1291760747-1.webp'); aspect-ratio: 2093 / 1447 ">
                             </div>
@@ -133,7 +134,7 @@
                     <div class="container">
                         <div class="header-container ml-none mr-none mt-medium mb-medium">
                             <div class="header__wrap w-100">
-                                <h2 class="text-style-none  text-align-center text-black">Gain a 360-degree view of consumer behavior        </h2>
+                                <h2 class="text-style-none  text-align-center text-black">Gain a 360-degree view of consumer behavior</h2>
                             </div>
                         </div>
                         <div class="image-copy image-side-right ml-none mr-none mt-medium mb-medium v-align-center type-normal">
@@ -150,7 +151,7 @@
                 </div>
             </section>
             <section  class="section">
-                <div class="section__wrap bg-gray text-black pl-none pr-none pt-large pb-large">www
+                <div class="section__wrap bg-gray text-black pl-none pr-none pt-large pb-large">
                     <div class="container">
                         <div class="header-container ml-none mr-none mt-medium mb-medium">
                             <div class="header__wrap w-100">
@@ -305,7 +306,7 @@
                                                             First Name:
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <input id="FirstName" name="FirstName" placeholder="* First Name" maxlength="100" aria-labelledby="LblFirstName InstructFirstName" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructFirstName" tabindex="-1" class="mktoInstruction"></span>
+                                                        <input required id="FirstName" name="FirstName" placeholder="* First Name" maxlength="100" aria-labelledby="LblFirstName InstructFirstName" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructFirstName" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
                                                     <div class="mktoClear"></div>
@@ -321,7 +322,7 @@
                                                             Last Name:
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <input id="LastName" name="LastName" placeholder="* Last Name" maxlength="100" aria-labelledby="LblLastName InstructLastName" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructLastName" tabindex="-1" class="mktoInstruction"></span>
+                                                        <input required id="LastName" name="LastName" placeholder="* Last Name" maxlength="100" aria-labelledby="LblLastName InstructLastName" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructLastName" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
                                                     <div class="mktoClear"></div>
@@ -337,7 +338,7 @@
                                                             Business Email Address:
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <input id="Email" name="Email" placeholder="* Business Email Address" maxlength="100" aria-labelledby="LblEmail InstructEmail" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructEmail" tabindex="-1" class="mktoInstruction"></span>
+                                                        <input required id="Email" name="Email" placeholder="* Business Email Address" maxlength="100" aria-labelledby="LblEmail InstructEmail" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructEmail" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
                                                     <div class="mktoClear"></div>
@@ -353,7 +354,7 @@
                                                             Company:
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <input id="Company" name="Company" placeholder="* Company" maxlength="100" aria-labelledby="LblCompany InstructCompany" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructCompany" tabindex="-1" class="mktoInstruction"></span>
+                                                        <input required id="Company" name="Company" placeholder="* Company" maxlength="100" aria-labelledby="LblCompany InstructCompany" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructCompany" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
                                                     <div class="mktoClear"></div>
@@ -369,7 +370,7 @@
                                                             Job Title:
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <input id="Title" name="Title" placeholder="* Job Title" maxlength="255" aria-labelledby="LblTitle InstructTitle" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructTitle" tabindex="-1" class="mktoInstruction"></span>
+                                                        <input required id="Title" name="Title" placeholder="* Job Title" maxlength="255" aria-labelledby="LblTitle InstructTitle" type="text" class="mktoField mktoTextField mktoHasWidth mktoRequired" aria-required="true" style="width: 285px;"><span id="InstructTitle" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
                                                     <div class="mktoClear"></div>
@@ -384,7 +385,12 @@
                                                             <div class="mktoAsterix">*</div>
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <div class="mktoLogicalField mktoCheckboxList mktoHasWidth" style="width: 285px;"><input name="emailOptIn" id="mktoCheckbox_62106_0" type="checkbox" value="true" aria-labelledby="LblemailOptIn LblmktoCheckbox_62106_0 InstructemailOptIn" class="mktoField"><label for="mktoCheckbox_62106_0" id="LblmktoCheckbox_62106_0">By checking this box, I agree to receive information and promotional material about {Company} solutions.  </label></div>
+                                                        <div class="mktoLogicalField mktoCheckboxList mktoHasWidth" style="width: 285px;">
+                                                            <input required name="emailOptIn" id="mktoCheckbox_62106_0" type="checkbox" value="true" aria-labelledby="LblemailOptIn LblmktoCheckbox_62106_0 InstructemailOptIn" class="mktoField">
+                                                            <label for="mktoCheckbox_62106_0" id="LblmktoCheckbox_62106_0">
+                                                                By checking this box, I agree to receive information and promotional material about {Company} solutions.  
+                                                            </label>
+                                                        </div>
                                                         <span id="InstructemailOptIn" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
@@ -400,7 +406,12 @@
                                                             <div class="mktoAsterix">*</div>
                                                         </label>
                                                         <div class="mktoGutter mktoHasWidth" style="width: 10px;"></div>
-                                                        <div class="mktoLogicalField mktoCheckboxList mktoHasWidth mktoRequired" style="width: 285px;"><input name="termsandConditions" id="mktoCheckbox_62101_0" type="checkbox" value="yes" aria-required="true" aria-labelledby="LbltermsandConditions LblmktoCheckbox_62101_0 InstructtermsandConditions" class="mktoField"><label for="mktoCheckbox_62101_0" id="LblmktoCheckbox_62101_0">By submitting this form, you accept the site <a href="terms.html" target="_blank" data-di-id="di-id-4bcf60fc-6f9ea80d">terms &amp; conditions</a> and the <a href="privacy.html" target="_blank" data-di-id="di-id-b0eb94ee-d4518ab0">privacy policy</a>.</label></div>
+                                                        <div class="mktoLogicalField mktoCheckboxList mktoHasWidth mktoRequired" style="width: 285px;">
+                                                            <input required name="termsandConditions" id="mktoCheckbox_62101_0" type="checkbox" value="yes" aria-required="true" aria-labelledby="LbltermsandConditions LblmktoCheckbox_62101_0 InstructtermsandConditions" class="mktoField">
+                                                            <label for="mktoCheckbox_62101_0" id="LblmktoCheckbox_62101_0">
+                                                                By submitting this form, you accept the site <a href="terms.html" target="_blank" data-di-id="di-id-4bcf60fc-6f9ea80d">terms &amp; conditions</a> and the <a href="privacy.html" target="_blank" data-di-id="di-id-b0eb94ee-d4518ab0">privacy policy</a>.
+                                                            </label>
+                                                        </div>
                                                         <span id="InstructtermsandConditions" tabindex="-1" class="mktoInstruction"></span>
                                                         <div class="mktoClear"></div>
                                                     </div>
@@ -414,6 +425,19 @@
                                                 </span>
                                             </div>
                                         </form>
+                                        <script>
+                                            document.getElementById("mktoForm_3827").addEventListener("submit", function (e) {
+                                              e.preventDefault();
+                                              // Replace the form content with a centered loading gif
+                                              document.getElementById("mktoForm_3827").innerHTML = 
+                                                '<div style="display: flex; justify-content: center; align-items: center; width: 100%;"><img src="files/loading.gif" width="80" alt="Loading..."></div>';
+                                          
+                                              setTimeout(() => {
+                                                document.getElementById("mktoForm_3827").innerHTML = 
+                                                  '<p style="font-size: 18px; color:white; font-weight: 700; text-align: center; margin-left: 7%;">Thank you for registering. A representative will contact you shortly.</p>';
+                                              }, 2000);
+                                            });
+                                        </script>                                          
                                     </div>
                                 </div>
                                 <div data-form-status="loading" class="form-header hidden-header loading" style="display: none;">
