add form redirections

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </div>
                             <div class="desktop-nav-right__wrap">
                                 <div class="demo-button__wrap">
-                                    <a href="#" class="btn btn-blue-white demo-request" data-di-id="di-id-be0000ca-6c800c74">Request a demo</a>
+                                    <a href="#mktoForm_3827" class="btn btn-blue-white demo-request" data-di-id="di-id-be0000ca-6c800c74">Request a demo</a>
                                 </div>
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                                 <p>Harness richer insights at scale so you can take action with confidence</p>
                             </div>
                             <div class="cta__wrap">
-                                <a target="_self" href="#" class="btn btn-white-blue text-white" data-di-id="di-id-53aaaeac-d1996903">
+                                <a target="_self" href="#mktoForm_3827" class="btn btn-white-blue text-white" data-di-id="di-id-53aaaeac-d1996903">
                                     Schedule a Demo                
                                 </a>
                             </div>
