--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact Us - {Company}</title>
+  <title>Contact Us - Crowd Consumer</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
 </head>
@@ -69,7 +69,7 @@
         Santacruz East, Mumbai, Maharashtra 400055, India <br>
         Phone - 0674 2702416 <br>
       </p>
-      <p class="text-gray-600 mb-4">&copy; 2025 {Company}. All Rights Reserved.</p>
+      <p class="text-gray-600 mb-4">&copy; 2025 Crowd Consumer. All Rights Reserved.</p>
       <nav>
         <a href="terms.html" class="text-blue-600 hover:underline mx-2">Terms and Conditions</a>
         <a href="privacy.html" class="text-blue-600 hover:underline mx-2">Privacy Policy</a>
