--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{Company}</title>
+        <title>Crowd Consumer</title>
         
         <link rel="stylesheet" id="wp-block-library-css" href="files/style.min.css" type="text/css" media="all">
         <link rel="stylesheet" id="weglot-css-css" href="files/front-css.css" type="text/css" media="all">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="container">
                         <div class="content__wrap text-white">
-                            <h1 class="header text-white">{Company}</h1>
+                            <h1 class="header text-white" style="font-weight: 900 !important;">Crowd Consumer</h1>
                             <h1 class="header text-white">Stay ahead of changing market dynamics</h1>
                             <div class="copy text-white">
                                 <p>Harness richer insights at scale so you can take action with confidence</p>
@@ -95,7 +95,7 @@
                             <div class="content__wrap w-100">
                                 <div class="text-align-center">
                                     <p>In today’s rapidly changing world, consumer lifestyles and the competitive landscape can shift in the blink of an eye. Your team relies on insights to understand the opportunities and challenges facing your business – with a need to act before it’s too late.</p>
-                                    <p>Empower your team with real-time insights at scale so you can act quickly with confidence. With {Company}, you can analyze massive datasets in real time, capture rich survey feedback quickly, cut down on research project timelines, and drive informed decisions.</p>
+                                    <p>Empower your team with real-time insights at scale so you can act quickly with confidence. With Crowd Consumer, you can analyze massive datasets in real time, capture rich survey feedback quickly, cut down on research project timelines, and drive informed decisions.</p>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                         <div class="image-copy image-side-left ml-none mr-none mt-medium mb-medium v-align-center type-normal">
                             <div class="copy__wrap">
                                 <div class="content">
-                                    <p>Analyze consumer spending and foot traffic behavior, and deploy targeted surveys to consumers who just visited a store or a website. Gain a holistic view of the market by comparing your performance against competitors with unblinded data. Don’t wait for independent reports on competitors – with {Company} you can quickly see which competitors are capturing share and specific opportunities for improvement.</p>
+                                    <p>Analyze consumer spending and foot traffic behavior, and deploy targeted surveys to consumers who just visited a store or a website. Gain a holistic view of the market by comparing your performance against competitors with unblinded data. Don’t wait for independent reports on competitors – with Crowd Consumer you can quickly see which competitors are capturing share and specific opportunities for improvement.</p>
                                     <p>The combination of real-time, unblinded behavioral data and survey data gives your team unprecedented insight into your customers and competitors, so you can get ahead of market needs and empower your team to act.</p>
                                 </div>
                             </div>
@@ -202,7 +202,7 @@
                         <div class="image-copy image-side-left ml-none mr-none mt-medium mb-medium v-align-center type-normal">
                             <div class="copy__wrap">
                                 <div class="content">
-                                    <p>Create, edit, and distribute surveys in no time with {Company} easy-to-use survey builder. Choose a predesigned template, based on decades of market research expertise, or start from scratch.</p>
+                                    <p>Create, edit, and distribute surveys in no time with Crowd Consumer easy-to-use survey builder. Choose a predesigned template, based on decades of market research expertise, or start from scratch.</p>
                                     <p>Get to insights faster by quickly collecting answers from your target groups and maximizing responses via multiple channels. Leverage real-time reporting to spot trends earlier, determine response rates more accurately, send reminders to increase responses, and easily share results across your organization.</p>
                                 </div>
                             </div>
@@ -224,7 +224,7 @@
                             <a style="pointer-events: none !important;" class="card up shadow  bg-white" target="" data-di-id="di-id-fb114137-5fb248e4">
                                 <div class="content__wrap text-align-center">
                                     <h4 class="card-title">
-                                        {Company} Video            
+                                        Crowd Consumer Video            
                                     </h4>
                                     <div class="card-copy">
                                         <p>Capture, analyze and share consumer insight video in a single platform. Automatically extract meaningful insights, so you can tell powerful stories that inspire better decision-making.</p>
@@ -388,7 +388,7 @@
                                                         <div class="mktoLogicalField mktoCheckboxList mktoHasWidth" style="width: 285px;">
                                                             <input required name="emailOptIn" id="mktoCheckbox_62106_0" type="checkbox" value="true" aria-labelledby="LblemailOptIn LblmktoCheckbox_62106_0 InstructemailOptIn" class="mktoField">
                                                             <label for="mktoCheckbox_62106_0" id="LblmktoCheckbox_62106_0">
-                                                                By checking this box, I agree to receive information and promotional material about {Company} solutions.  
+                                                                By checking this box, I agree to receive information and promotional material about Crowd Consumer solutions.  
                                                             </label>
                                                         </div>
                                                         <span id="InstructemailOptIn" tabindex="-1" class="mktoInstruction"></span>
@@ -495,7 +495,7 @@
                                 Santacruz East, Mumbai, Maharashtra 400055, India <br>
                                 Phone - 0674 2702416 <br>
                             </p>
-                            <p style="color: #000 !important;">Copyright © 2025 {Company}. All rights reserved.</p>
+                            <p style="color: #000 !important;">Copyright © 2025 Crowd Consumer. All rights reserved.</p>
                         </div>
                     </div>
                 </div>
