--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="mobile-header">
                     <div class="nav-logo">
                         <a href="index.html" data-track-click="nav" data-di-id="di-id-931d871e-95495f40">
-                        <img src="#" alt="Logo"  style="height:26px !important;">
+                        <img src="files/logo.png" alt="Logo"  style="height:42px !important;">
                         </a>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                         <div class="nav-container">
                             <div class="nav-logo">
                                 <a href="index.html" data-di-id="di-id-b7a74598-4befeb94">
-                                <img src="#" alt="Logo">
+                                <img src="files/logo.png" alt="Logo" style="width: 205px; height: auto;">
                                 </a>
                             </div>
                             <div class="desktop-nav-right__wrap">
@@ -467,7 +467,7 @@
                     <div class="footer-externals__wrap">
                         <div>
                             <a href="index.html" data-track-click="nav" data-di-id="di-id-6964d5d0-99755b0c">
-                                <img src="#" alt="Logo">
+                                <img src="files/logo.png" alt="Logo" style="width: 220px; height: auto;">
                             </a>
                         </div>
                     </div>
