--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact Us - Crowd Consumer</title>
+  <title>Contáctanos - Crowd Consumer</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
 </head>
 <body class="flex flex-col min-h-screen">
-  <!-- Header -->
+  <!-- Encabezado -->
   <header class="bg-white py-4 shadow">
     <div class="container mx-auto flex items-center px-4">
       <a href="index.html">
@@ -17,42 +17,42 @@
     </div>
   </header>
 
-  <!-- Main Content -->
+  <!-- Contenido Principal -->
   <main class="bg-gray-100 flex-grow py-8">
     <div class="container mx-auto px-4">
-      <h1 class="text-3xl font-bold text-gray-800 mb-6">Contact Us</h1>
+      <h1 class="text-3xl font-bold text-gray-800 mb-6">Contáctanos</h1>
       <p class="text-gray-700 mb-6">
-        We’d love to hear from you! Whether you have a question about our services, need assistance, or just want to share your thoughts, our team is ready to answer all your queries. Please fill out the form below or use the contact information provided, and we will get back to you as soon as possible.
+        ¡Nos encantaría saber de ti! Ya sea que tengas una pregunta sobre nuestros servicios, necesites asistencia o simplemente quieras compartir tus comentarios, nuestro equipo está listo para responder todas tus consultas. Por favor, completa el siguiente formulario o utiliza la información de contacto proporcionada, y te responderemos lo antes posible.
       </p>
       <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <form id="form">
           <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
-              Name
+              Nombre
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="name" type="text" placeholder="Your name" required>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="name" type="text" placeholder="Tu nombre" required>
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-              Email
+              Correo Electrónico
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Your email" required>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Tu correo electrónico" required>
           </div>
           <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="subject">
-              Subject
+              Asunto
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="subject" type="text" placeholder="Subject" required>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="subject" type="text" placeholder="Asunto" required>
           </div>
           <div class="mb-6">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="message">
-              Message
+              Mensaje
             </label>
-            <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="message" rows="5" placeholder="Your message here..." required></textarea>
+            <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="message" rows="5" placeholder="Tu mensaje aquí..." required></textarea>
           </div>
           <div class="flex items-center justify-between">
             <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-              Send Message
+              Enviar Mensaje
             </button>
           </div>
         </form>
@@ -60,21 +60,21 @@
     </div>
   </main>
 
-  <!-- Footer -->
+  <!-- Pie de Página -->
   <footer class="bg-white py-6 mt-auto">
     <div class="container mx-auto px-4 text-center">
       <p class="text-gray-600 mb-2">
-        CIN - U01631KA2010PTC096843 <br>
-        Address - 2, Western Urban Rd, Davri Nagar, Siddharth Nagar, <br>
-        Santacruz East, Mumbai, Maharashtra 400055, India <br>
-        Phone - 0674 2702416 <br>
+        CNPJ: 78.989.613/0001-90 <br>
+        Inscripción Estatal: 8324829-77 <br>
+        Dirección: 974 Rua Itaguaí, Mangabeira, Feira de Santana, 44056-516 <br>
+        Número de teléfono: (75) 2871-8215 <br>
       </p>
-      <p class="text-gray-600 mb-4">&copy; 2025 Crowd Consumer. All Rights Reserved.</p>
+      <p class="text-gray-600 mb-4">&copy; 2025 Crowd Consumer. Todos los derechos reservados.</p>
       <nav>
-        <a href="terms.html" class="text-blue-600 hover:underline mx-2">Terms and Conditions</a>
-        <a href="privacy.html" class="text-blue-600 hover:underline mx-2">Privacy Policy</a>
-        <a href="about.html" class="text-blue-600 hover:underline mx-2">About Us</a>
-        <a href="contact.html" class="text-blue-600 hover:underline mx-2">Contact Us</a>
+        <a href="terms.html" class="text-blue-600 hover:underline mx-2">Términos y Condiciones</a>
+        <a href="privacy.html" class="text-blue-600 hover:underline mx-2">Política de Privacidad</a>
+        <a href="about.html" class="text-blue-600 hover:underline mx-2">Acerca de Nosotros</a>
+        <a href="contact.html" class="text-blue-600 hover:underline mx-2">Contáctanos</a>
       </nav>
     </div>
   </footer>
@@ -82,13 +82,13 @@
   <script>
     document.getElementById("form").addEventListener("submit", function (e) {
       e.preventDefault();
-      // Replace the form content with a centered loading gif
+      // Reemplaza el contenido del formulario con un gif de carga centrado
       document.getElementById("form").innerHTML = 
-        '<div class="flex justify-center items-center"><img src="files/loading.gif" width="80" alt="Loading..."></div>';
+        '<div class="flex justify-center items-center"><img src="files/loading.gif" width="80" alt="Cargando..."></div>';
 
       setTimeout(() => {
         document.getElementById("form").innerHTML = 
-          '<p class="text-center text-xl text-black font-bold">Thank you for registering. A representative will contact you shortly.</p>';
+          '<p class="text-center text-xl text-black font-bold">Gracias por registrarte. Un representante se pondrá en contacto contigo en breve.</p>';
       }, 2000);
     });
   </script>
